feat: enhance DhanClient with cached auth headers and improve performance
- Added cached `HeaderValue` for access token and client ID in `DhanClient` to avoid per-request allocation.
- Updated `auth_headers` method to use cached values, reducing string parsing overhead.
- Modified `handle_response` to utilize `bytes()` for response handling, improving efficiency.

feat: add WebSocket support for market feed and order updates

- Introduced `ws` module with `market_feed` and `order_update` submodules for real-time data streaming.
- Implemented `MarketFeedStream` for live market data with binary packet parsing.
- Created `OrderUpdateStream` for receiving order status updates via WebSocket.

feat: define postback payload types for webhook integration

- Added `PostbackPayload` struct to handle incoming webhook data from Dhan.
- Included methods to check order status (traded, rejected, cancelled, pending) in `PostbackPayload`.

chore: update dependencies in Cargo.toml

- Added `futures-util` dependency for improved async stream handling.
- Updated existing dependencies to their latest versions for better performance and security.

feat: define new WebSocket endpoints for market depth

- Added constants for 20-level and 200-level market depth WebSocket endpoints in `constants.rs`.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,5 @@ tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
 thiserror = "2"
 chrono = { version = "0.4", features = ["serde"] }
 tracing = "0.1"
-byteorder = "1"
 url = "2"
+futures-util = { version = "0.3.32", features = ["sink"] }
