--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ readme = "README.md"
 keywords = ["dhan", "trading", "broker", "api", "finance"]
 categories = ["api-bindings", "finance"]
 authors = ["SPRAGE"]
-exclude = ["PLAN.md", "flake.nix", "flake.lock", ".direnv/"]
+exclude = ["PLAN.md", "flake.nix", "flake.lock", ".direnv/", "publish.sh"]
 
 [dependencies]
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
