fix: correct doubled /v2 in API base URL & add sandbox integration tests
- Fixed API_BASE_URL from 'https://api.dhan.co/v2' to 'https://api.dhan.co'
  since all method paths already include '/v2' (e.g. '/v2/orders').
  The old value produced broken URLs like '/v2/v2/orders'.

- Added 23 integration tests in tests/sandbox.rs covering:
  profile, order lifecycle (place→get→modify→cancel), order/trade book,
  holdings, positions, funds, margin calculator, LTP/OHLC/quote,
  daily & intraday historical, forever orders, super orders,
  kill switch, ledger, trade history, error handling, client construction.

- Tests run against https://sandbox.dhan.co with env vars:
  DHAN_CLIENT_ID and DHAN_ACCESS_TOKEN (skipped when unset).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,7 @@ chrono = { version = "0.4", features = ["serde"] }
 tracing = "0.1"
 url = "2"
 futures-util = { version = "0.3.32", features = ["sink"] }
+
+[dev-dependencies]
+tokio = { version = "1", features = ["full", "test-util"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
